--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarefas</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <h1>Lista de tarefas</h1>
 
     <div id="wrapper">
-        <form>
+        <form id="todo-form">
             <input type="text" placeholder="escreva sua tarefa e aperte enter" autocomplete="off" id="input-text" >
 
             <button id="add-button">
@@ -19,33 +20,6 @@
         </form>
 
         <ul id="todo-list">
-         <!--    <li class="todo">
-                <input type="checkbox" id="todo-1">
-
-                <label for="todo-1" class="custom-checkbox">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
-                </label>
-
-                <label for="todo-1" class="todo-text">esse local vai receber o texto da tarefa</label>
-
-                <button class="delete-button">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/></svg>
-                </button>
-            </li>
-
-            <li class="todo">
-                <input type="checkbox" id="todo-2">
-
-                <label for="todo-2" class="custom-checkbox">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
-                </label>
-
-                <label for="todo-2" class="todo-text">esse local vai receber o texto da tarefa</label>
-
-                <button class="delete-button">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/></svg>
-                </button>
-            </li> -->
         </ul>
     </div>
 </body>
