--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarefas</title>
     <link rel="stylesheet" href="style.css">
-    <script src="todoapp.js" defer></script>
-    <script src="darkmode.js" defer></script>
+    <script type="module" src="js/main.js" defer></script>
+    <script src="js/darkmode.js" defer></script>
 </head>
 <body>
     <h1>Lista de tarefas</h1>
